# smallpt

./: .clang-format  .gitignore  meson.build  meson_options.txt
cpp/: main.cpp
cpp/smallpt/: constants.hpp  primitives.cpp  primitives.hpp  span.hpp  vec.cpp  vec.hpp
d/: main.d
d/smallpt/: constants.d  primitives.d  radiance.d  rng.d  vec.d
odin/: main.odin
odin/smallpt/: constants.odin  primitives.odin  vec.odin
src/: main.cpp  main.d
